--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,9 @@
   "manifest_version": 2,
   "minimum_chrome_version": "43",
   "devtools_page": "devtools.html",
+  "background": {
+    "scripts": ["background.js"]
+  },
   "icons": {
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
