--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A chrome extension for devtools to better display graphql requests",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build" : "node node_modules/webpack/bin/webpack.js"
   },
   "keywords": [
     "Graphql",
